--- a/ref_dft.bib
+++ b/ref_dft.bib
@@ -6,7 +6,7 @@
 @article{QE2009,
    author = {Giannozzi, Paolo and Baroni, Stefano and Bonini, Nicola and Calandra, Matteo and Car, Roberto and Cavazzoni, Carlo and Ceresoli, Davide and Chiarotti, Guido L and Cococcioni, Matteo and Dabo, Ismaila},
    title = {QUANTUM ESPRESSO: a Modular and Open-Source Software Project for Quantum Simulations of Materials},
-   journal = {Journal of Physics: Condensed matter},
+   journal = {Journal of Physics: Condensed Matter},
    volume = {21},
    number = {39},
    pages = {395502},
@@ -67,13 +67,16 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @article{PBE_Errata_1997,
-   author = {Perdew, JP and Burke, K and Ernzerhof, M},
-   title = {Phys Rev Lett 77: 3865},
-   journal = {Errata:(1997) Phys Rev Lett},
-   volume = {78},
-   pages = {1396},
-   year = {1996},
-   type = {Journal Article}
+  title = {Generalized Gradient Approximation Made Simple [Phys. Rev. Lett. 77, 3865 (1996)]},
+  author = {Perdew, John P. and Burke, Kieron and Ernzerhof, Matthias},
+  journal = {Phys. Rev. Lett.},
+  volume = {78},
+  issue = {7},
+  pages = {1396--1396},
+  numpages = {0},
+  year = {1997},
+  month = {Feb},
+  publisher = {American Physical Society},
 }
 
 @article{PBE_1996,
@@ -158,7 +161,7 @@
 @article{Grimme_2006_d3,
   title={Semiempirical GGA-type density functional constructed with a long-range dispersion correction},
   author={Grimme, Stefan},
-  journal={Journal of computational chemistry},
+  journal={Journal of Computational Chemistry},
   volume={27},
   number={15},
   pages={1787--1799},
@@ -278,7 +281,7 @@ note={Gaussian Inc. Wallingford CT}
 @article{reed1985NLMO,
   title={Natural localized molecular orbitals},
   author={Reed, Alan E and Weinhold, Frank},
-  journal={The Journal of chemical physics},
+  journal={The Journal of Chemical Physics},
   volume={83},
   number={4},
   pages={1736--1740},
